Preparando el proyectoo

--- a/barberia-frontend/public/index.html
+++ b/barberia-frontend/public/index.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Rhea - Barbería</title>
+    <!-- Icono de la aplicación -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Meta tags para SEO -->
+    <meta
+      name="description"
+      content="Aplicación web de gestión y reservas para barberías y salones de belleza"
+    />
   </head>
   <body>
+    <!-- Punto de entrada para React -->
     <div id="root"></div>
+
+    <!-- Scripts generados por React -->
   </body>
 </html>
